compiler/lyra/src/test/resources/semantic_errors/Precociousreference.ly
class Application {
    def main {
        Bool truth = true;
        if (truth) {
            out.writeln(x); //error here
            Int x = 2;
        }
    }
}